[package]
name = "netmon"
version = "0.1.0"
authors = ["vihaanr2 <vihaanr2@illlinos.edu>", "rohitck2 <rohitck2@illlinos.edu>"]
edition = "2021"
description = """
Network monitoring tool written in Rust.
"""
readme = "README.md"
repository = "https://github.com/vihaanrao/rustnetworkmonitoringtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.25.0"
structopt = "0.3.22"
tui = "0.5.1"

